added version string to overview

--- a/src/main.tex
+++ b/src/main.tex
@@ -1,7 +1,10 @@
 \documentclass[10pt]{report}
 
 \input{src/preamble.tex}
+\input{src/macros.tex}
 
 \begin{document}
-	\input{src/chapters/introduction.tex}
+	\input{src/chapters/overview.tex}
+	\input{src/chapters/syntax.tex}
+
 \end{document}
