made un-introduced reference stand out more

--- a/src/macros.tex
+++ b/src/macros.tex
@@ -21,6 +21,6 @@
     \ifcsname #1_ref\endcsname
         \csname #1_intro\endcsname%
     \else
-        \textbf{[Reference ``#1`` not yet introduced]}%
+        \textbf{\textcolor{red}{[Reference ``#1`` not yet introduced]}}%
     \fi
 }
