--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -23,3 +23,6 @@
 \usepackage{titlesec}
 \titlelabel{\thetitle\quad|\quad}
 \titleformat{\chapter}{\normalfont\huge\bfseries}{\thesection\quad|}{20pt}{\Huge}
+
+% color
+\usepackage{xcolor}
