updated comment for reftext command

--- a/src/macros.tex
+++ b/src/macros.tex
@@ -14,7 +14,7 @@
 	\textit{#1#2}%
 }
 
-% Define the reference text
+% Reference a key term
 % #1 base word
 % #2 inflection
 \newcommand{\reftext}[2]{%
