--- a/src/macros.tex
+++ b/src/macros.tex
@@ -3,7 +3,9 @@
 \newcommand{\specverminor}{0}
 \newcommand{\specverpatch}{1}
 \newcommand{\specverlabel}[1]{-#1}
-\newcommand{\specver}{\specvermajor.\specverminor.\specverpatch\specverlabel{alpha}}
+\newcommand{\specver}{%
+    \specvermajor.\specverminor.\specverpatch\specverlabel{alpha}%
+}
 
 % Introduces a key term
 % #1 base word
