added a macro for table widths

--- a/src/macros.tex
+++ b/src/macros.tex
@@ -49,3 +49,5 @@
         \textbf{\textcolor{red}{[Reference ``#1'' not introduced yet (pre-intro)]}}%
     \fi
 }
+
+\newcommand{\tablewidth}{.8\linewidth}
